src/objects/c2g__AllocScheduleTemplate__c.object
<CustomObject>
    <description>Represents the junction between an allocation schedule and an allocation template.</description>
    <fields>
        <fullName>c2g__AllocSchedule__c</fullName>
        <label>Allocation Schedule</label>
        <referenceTo>c2g__AllocSchedule__c</referenceTo>
        <relationshipLabel>Allocation Schedule Templates</relationshipLabel>
        <relationshipName>AllocScheduleTemplates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__AllocationTemplate__c</fullName>
        <label>Allocation Template</label>
        <referenceTo>c2g__AllocationTemplate__c</referenceTo>
        <relationshipLabel>Allocation Schedule Templates</relationshipLabel>
        <relationshipName>AllocScheduleTemplates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Sequence__c</fullName>
        <description>The sequence number of this template within the list of templates.</description>
        <label>Sequence</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Allocation Schedule Template</label>
    <nameField>
        <displayFormat>AST-{0000000}</displayFormat>
        <label>Allocation Schedule Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Schedule Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>